--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.81.5",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/stack": "^7.6.13",
+    "@reduxjs/toolkit": "^2.11.2",
+    "@sentry/react-native": "^7.8.0",
+    "ky": "^1.14.2",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "@react-native/new-app-screen": "0.81.5",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-bootsplash": "^6.3.11",
+    "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.19.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-worklets": "^0.7.1",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -32,7 +46,11 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-svg-transformer": "^1.5.2",
     "react-test-renderer": "19.1.0",
+    "reactotron-react-native": "^5.1.18",
+    "reactotron-redux": "^3.2.1",
     "typescript": "^5.8.3"
   },
   "engines": {
